TEST_PROGRAMS/INVALID/03/invalid_expstmt2.go
package main
func f() {
	x = y | x;
	x = x + y;
	x = float64(10 * 20 / x);
	x = x || y;
	x = -x;
	x = x + y;
	x = x.f();
	x + y;
}
